--- a/theme.css
+++ b/theme.css
@@ -58,6 +58,13 @@ div[data-screen-name='rcp-fe-lol-navigation-screen'] {
     filter: drop-shadow(1px 1px 10px #9100ff) !important; 
 }
 
+#rcp-fe-viewport-root #rcp-fe-lol-navigation-app {
+    pointer-events: none;
+    position: relative;
+    z-index: 10;
+    background: #7a00ff24!important;
+}
+
 .lol-social-sidebar {
     width: 100%;
     height: 100%;
@@ -70,23 +77,6 @@ div[data-screen-name='rcp-fe-lol-navigation-screen'] {
     -webkit-user-drag: none;
     -webkit-user-select: none;
     background: linear-gradient(#3f2375, #c100d81a 18%)!important;
-}
-
-.section, :host-context(lol-uikit-navigation-bar[type=nav-bar-secondary]) .section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    color: #f1f1f1!important;
-    border: none;
-    margin: 0;
-    text-decoration: none;
-    outline: none;
-    transition: text-shadow 0.3s ease-in-out, background 1.5s;
-    width: 100%;
-    height: 100%;
-    min-height: 20px;
-    cursor: pointer;
 }
 
 .section.active .section-glow {
