--- a/theme.css
+++ b/theme.css
@@ -57,47 +57,26 @@ div[data-screen-name='rcp-fe-lol-navigation-screen'] {
     background: #000;
     filter: drop-shadow(1px 1px 10px #9100ff) !important; 
 }
-.section, :host-context(lol-uikit-navigation-bar[type=nav-bar-secondary]) .section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+#rcp-fe-viewport-root #rcp-fe-lol-navigation-app {
+    pointer-events: none;
     position: relative;
-    color: #f1f1f1!important;
-    border: none;
-    margin: 0;
-    text-decoration: none;
-    outline: none;
-    transition: text-shadow 0.3s ease-in-out, background 1.5s;
+    z-index: 10;
+    background: #7a00ff24!important;
+}
+
+.lol-social-sidebar {
     width: 100%;
     height: 100%;
-    min-height: 20px;
-    cursor: pointer;
-}
-
-.section.active .section-glow {
-    height: 1px;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    top: 20px;
-    margin: 0;
-    background: linear-gradient(to left, transparent, #9e6dff, transparent)!important;
-}
-
-.section.active, :host-context(lol-uikit-navigation-bar[type=nav-bar-secondary]) .section.active {
-    color: #846bff;
-    text-shadow: 0px 0px 21px #8500ff!important;
-    /* opacity: 1; */
-}
-
- .section.active {
-    background-image: linear-gradient(0deg, rgba(157, 84, 255, 0.3) 0%, rgba(34, 0, 66, 0.19) 55%)!important;
-}
-
-.section.active, :host-context(lol-uikit-navigation-bar[type=nav-bar-secondary]) .section.active {
-    color: #ffffff!important;
-    text-shadow: 0px 1px 15px white!important;
-    font-family: 'Orbitron', sans-serif!important;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    color: #a09b8c;
+    font-size: 12px;
+    cursor: default;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    background: linear-gradient(#3f2375, #c100d81a 18%)!important;
 }
 
 .section, :host-context(lol-uikit-navigation-bar[type=nav-bar-secondary]) .section {
