--- a/theme.css
+++ b/theme.css
@@ -78,7 +78,50 @@ div[data-screen-name='rcp-fe-lol-navigation-screen'] {
     -webkit-user-select: none;
     background: linear-gradient(#3f2375, #c100d81a 18%)!important;
 }
+/*верхние кнопки в лобби?*/
+.section, :host-context(lol-uikit-navigation-bar[type=nav-bar-secondary]) .section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    color: #f1f1f1!important;
+    border: none;
+    margin: 0;
+    text-decoration: none;
+    outline: none;
+    transition: text-shadow 0.3s ease-in-out, background 1.5s;
+    width: 100%;
+    height: 100%;
+    min-height: 20px;
+    cursor: pointer;
+}
 
+.section.active .section-glow {
+    height: 1px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 20px;
+    margin: 0;
+    background: linear-gradient(to left, transparent, #9e6dff, transparent)!important;
+}
+
+.section.active, :host-context(lol-uikit-navigation-bar[type=nav-bar-secondary]) .section.active {
+    color: #846bff;
+    text-shadow: 0px 0px 21px #8500ff!important;
+    /* opacity: 1; */
+}
+
+ .section.active {
+    background-image: linear-gradient(0deg, rgba(157, 84, 255, 0.3) 0%, rgba(34, 0, 66, 0.19) 55%)!important;
+}
+
+.section.active, :host-context(lol-uikit-navigation-bar[type=nav-bar-secondary]) .section.active {
+    color: #ffffff!important;
+    text-shadow: 0px 1px 15px white!important;
+    font-family: 'Orbitron', sans-serif!important;
+}
+/**/
 .section, :host-context(lol-uikit-navigation-bar[type=nav-bar-secondary]) .section {
     display: flex;
     align-items: center;
@@ -96,7 +139,8 @@ div[data-screen-name='rcp-fe-lol-navigation-screen'] {
     cursor: pointer;
     font-family: 'Orbitron', sans-serif!important;
 }
-
+/*Анимация на фоне лута?*/
+/*
 ::content .lol-uikit-video-content {
     position: absolute;
     pointer-events: none;
@@ -112,7 +156,7 @@ lol-uikit-full-page-backdrop {
     top: 0;
     bottom: 0;
 }
-
+*/
 .loot-backdrop {
     position: absolute;
     width: 1055px;
