--- a/theme.css
+++ b/theme.css
@@ -191,6 +191,7 @@ lol-uikit-full-page-backdrop {
     -webkit-user-select: none;
     box-shadow: inset 0px 0px 40px rgba(157, 0, 255, 0.23);
 }
+/* иконки активности */
 /*
 .availability-icon{
     background-color: #6523CF !important;
