--- a/theme.css
+++ b/theme.css
@@ -795,14 +795,17 @@ lol-uikit-flat-button-secondary{
   width: auto !important;
 }*/
 
-
+/*
 .basic-button{
   left: 470px !important;
   height: 48px !important;
   width: 122px !important;
   top: 15px !important;
 }
-
+*/
+.basic-button{
+  margin-left: -200px !important!;
+}
 .left-nav-menu{
     position: relative !important;
     margin-left: -200px !important;
