--- a/theme.css
+++ b/theme.css
@@ -459,7 +459,7 @@ lol-regalia-banner-v2-element{
 }
 
 /* COLLECTION */
-
+/*
 .collections-application{
   position: relative;
   isolation: isolate;
@@ -472,7 +472,7 @@ lol-regalia-banner-v2-element{
   left: 0;
   width: 100%;
   height: 100%;
-  /* filter: hue-rotate(-150deg); */
+  // filter: hue-rotate(-150deg); //
   mix-blend-mode: hue;
   background-color:rgb(101, 25, 224, 0.6);
   z-index: 1;
@@ -482,7 +482,7 @@ lol-regalia-banner-v2-element{
   position: relative;
   z-index: 2;
 }
-
+*/
 /* YOUR SHOP */
 
 .yourshop-root{
