--- a/theme.css
+++ b/theme.css
@@ -124,13 +124,13 @@ div[data-screen-name='rcp-fe-lol-navigation-screen'] {
 }
 
 .section, :host-context(lol-uikit-navigation-bar[type=nav-bar-secondary]) .section {
-    /*display: flex;
+    display: flex;
     align-items: center;
     justify-content: center;
-    position: relative; */
+    position: relative; 
     color: #facfffc2!important;
     border: none;
-    /*margin: 0; */
+    margin: 0; 
     text-decoration: none;
     outline: none;
     transition: text-shadow 0.3s ease-in-out, background 1.5s;
@@ -138,11 +138,11 @@ div[data-screen-name='rcp-fe-lol-navigation-screen'] {
     height: 100%;
     min-height: 20px;
     cursor: pointer;
-    /*font-family: 'Orbitron', sans-serif!important;*/
+    font-family: 'Orbitron', sans-serif!important;
   
 }
 /*Анимация на фоне лута*/
-/*
+
 ::content .lol-uikit-video-content {
     position: absolute;
     pointer-events: none;
@@ -166,7 +166,7 @@ lol-uikit-full-page-backdrop {
     overflow: hidden;
     filter: hue-rotate(49deg);
 }
-*/
+
 
 .game-type-card .parties-game-type-upper-half {
     position: relative;
@@ -975,5 +975,5 @@ lol-social-roster .more-unread .more-unread-bar{
   background-color: #BB86FF !important;
 }
 .gem {
-  filter: hue-rotate(-131deg);
+  filter: hue-rotate(-189deg);
 }
