--- a/theme.css
+++ b/theme.css
@@ -976,7 +976,10 @@ lol-social-roster .more-unread .more-unread-bar{
 }
 .gem {
   filter: hue-rotate(-220deg);
+  filter: contrast(120%);
 }
 .flyout-selector-button-container {
   filter: hue-rotate(131deg);
+  filter: brightness(115%);
+  filter: contrast(120%);
 }
